backgroundVideo added commit

--- a/react-cv/public/index.html
+++ b/react-cv/public/index.html
@@ -12,12 +12,17 @@
 
     <title>Ali Yildiz - cv</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="backgroundVideo.css" />
   </head>
 
-  <body>
+  <body  >
+    <video id="bgvid" playsinline autoplay muted loop poster="polina.jpg" id="bgvid">
+      <source src="./media/PexelsHD.mp4" type="video/mp4">
+    </video>
 
     <div id="root"></div>
-
+    
+    
   </body>
 
 </html>
