--- a/react-cv/public/index.html
+++ b/react-cv/public/index.html
@@ -17,7 +17,7 @@
 
   <body  >
     <video id="bgvid" playsinline autoplay muted loop poster="polina.jpg" id="bgvid">
-      <source src="./media/PexelsHD.mp4" type="video/mp4">
+      <source src="./media/BGHD2.mp4" type="video/mp4">
     </video>
 
     <div id="root"></div>
